--- a/exo_perso/style.css
+++ b/exo_perso/style.css
@@ -1,4 +1,4 @@
-.btn{
+/* .btn{
     padding: 30px 53px;
     margin-bottom: 2px;
     background: var(--color);
@@ -11,4 +11,43 @@
 .btn-5 {--color: brown;}
 .btn-6 {--color: orange;}
 .btn-7 {--color: purple;}
-.btn-8 {--color: black;}
+.btn-8 {--color: black;} */
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    width: 100%;
+    height: 60%;
+    background-color: red;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+.bouton-1{
+    width: 100px;
+    height: 100px;
+    background-color: blanchedalmond;
+}
+.bouton-2{
+    width: 100px;
+    height: 100px;
+    background-color: green;
+}
+.bouton-3{
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+}
+.bouton-4{
+    width: 100px;
+    height: 100px;
+    background-color: yellow;
+}
+.border{
+    border-radius: 60%;
+}
+
