--- a/Manipulation_DOM_PROJET_JS/asset/projet-1.css
+++ b/Manipulation_DOM_PROJET_JS/asset/projet-1.css
@@ -11,7 +11,7 @@ body {
     align-items: center;
     height: 100vh;
     text-align: center;
-    background: url(img/image1.jpeg) no-repeat center center/ cover;
+    background: url(./img/image1.jpeg) no-repeat center center/ cover;
 }
 
 .container {
