--- a/Manipulation_DOM_PROJET_JS/asset/projet-2.css
+++ b/Manipulation_DOM_PROJET_JS/asset/projet-2.css
@@ -7,7 +7,7 @@
 
 
    body {
-      background: url(img/image2.jpg) no-repeat center center/ cover;
+      background: url(./img/image2.jpg) no-repeat center center/ cover;
       height: 100vh;
       position: relative;
    }
