--- a/Manipulation_DOM_PROJET_JS/asset/projet-5.css
+++ b/Manipulation_DOM_PROJET_JS/asset/projet-5.css
@@ -7,7 +7,7 @@
 
 body {
     height: 100vh;
-    background: url(img/mais.jpeg) no-repeat center center/cover;
+    background: url(./img/mais.jpeg) no-repeat center center/cover;
 
     display: flex;
     justify-content: center;
